--- a/language-service/backend/Makefile
+++ b/language-service/backend/Makefile
@@ -1,7 +1,7 @@
 install:
-	virtualenv venv -p python3.7;
-	. venv/bin/activate;
-	pip install -r requirements.txt ;
+	test -d venv || virtualenv venv -p python3.7
+	. venv/bin/activate; pip install --upgrade pip
+	. venv/bin/activate; pip install -Ur requirements.txt
 
 run: install
 	uvicorn app.main:app --reload
