--- a/language-service/backend/Makefile
+++ b/language-service/backend/Makefile
@@ -1,10 +1,11 @@
 install:
-	test -d venv || virtualenv venv -p python3.7
+	test -d venv || virtualenv venv -p python3.9
 	. venv/bin/activate; pip install --upgrade pip
+	. venv/bin/activate; pip install cython
 	. venv/bin/activate; pip install -Ur requirements.txt
 
 run: install
-	uvicorn app.main:app --reload
+	. venv/bin/activate; uvicorn app.main:app --reload
 
 clean:
 	rm -r venv/
